# Chess_diagram_to_FEN

./: .gitignore  LICENSE  README.md  chess_diagram_to_fen.py  download_lichess_games.sh  download_website_screenshots.sh  main.py  pyproject.toml
bench/: e2e_smoke.py  fastpath_wrapper.py  pdf_batch.py  run_project_batch.py  run_project_sharded.py  test_dense.py  test_device.py  test_fen.py  test_project_model.py  test_tiles.py  test_torch_fast.py
models/: best_model_orientation_0.987_2024-02-04-17-34-05.pth
speedkit/: fen.py  io.py  orient.py  project_model_loader.py  sitecustomize.py  tiles.py  torch_fast.py
src/: common.py  consts.py
src/board_image_rotation/: dataset.py  model.py  show_wrong_evals.py  train.py
src/board_orientation/: dataset.py  model.py  show_wrong_evals.py  train.py
src/bounding_box/: dataset.py  generate_chessboards_bbox.py  inference.py  model.py  train.py
src/existence/: dataset.py  generate_existence.py  model.py  show_wrong_evals.py  train.py
src/fen_recognition/: dataset.py  generate_chessboards.py  model.py  show_wrong_evals.py  train.py
