[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Chess_diagram_to_FEN"
version = "0.0.1"
authors = [
  { name="Jost Triller", email="tsoj.tsoj@gmx.de" },
]
description = "Convert images of chess diagrams into FENs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "matplotlib ~= 3.8.2",
  "scikit-image ~= 0.22.0",
  "tqdm ~= 4.66.1",
  "python-chess ~= 1.999",
  "cairosvg ~= 2.7.1",
  "pyfastnoisesimd ~= 0.4.2"
]

[project.urls]
Homepage = "https://github.com/tsoj/Chess_diagram_to_FEN"
Issues = "https://github.com/tsoj/Chess_diagram_to_FEN/issues"